# FaceDetection

./: .gitignore  AUTHORS  CMakeLists.txt  Makefile  README.md
classifiers/: 200c_1000i  200c_2000i  200c_3500i  400c_1000i  400c_2000i  400c_3500i
src/: config.cpp  config.h  main.cpp  tp.cc  tp.hh
src/detector/: detector.cpp  detector.h
src/features/: feature.cpp  feature.h  features.cpp  features.h  four-rectangles-feature.cpp  four-rectangles-feature.h  three-horizontal-rectangles-feature.cpp  three-horizontal-rectangles-feature.h  three-vertical-rectangles-feature.cpp  three-vertical-rectangles-feature.h  two-horizontal-rectangles-feature.cpp  two-horizontal-rectangles-feature.h  two-vertical-rectangles-feature.cpp  two-vertical-rectangles-feature.h
src/image/: grey-image.cpp  grey-image.h  integral-image.cpp  integral-image.h
src/tools/: Point.cpp  Point.h  point.cpp  rectangle.cpp  rectangle.h  window.cpp  window.h
src/trainer/: feature-value.cpp  feature-value.h  feature-values.cpp  feature-values.h  features-values.cpp  features-values.h  strong-classifier.cpp  strong-classifier.h  test-image.cpp  test-image.h  test-weak-classifier.cpp  test-weak-classifier.h  weak-classifier.cpp  weak-classifier.h
tp/: tp.cc  tpcorrection.cc
